ghc-4335c07/testsuite/tests/typecheck/should_compile/Tc266.hs
module Tc266 where
import Tc266a
data T = T
f = T
