ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail053.hs
module TcFail where

data B = C A
